# StructIO

./: LICENSE  README.md  dbpf.py  pyproject.toml  structio.py  test.py
.github/workflows/: python-package.yml  python-publish.yml
