[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "structio"
version = "1.0.5"
description = "A Library for unparsing, parsing, and editing binaries"
readme = "README.md"
requires-python = ">=3.2"

[project.urls]
"Homepage" = "https://github.com/lingeringwillx/StructIO"
